--- a/i18n/en_US.json
+++ b/i18n/en_US.json
@@ -13,12 +13,12 @@
     "print":"Print",
     "add_more":"Add More",
     "add":"Add",
-    "edu_background":"Education Background",
+    "edu_background":"Background",
     "school":"School",
     "major":"Major",
     "skill":"Skill",
     "cate_professional":"Professional",
-    "cate_langauge":"Langauge",
+    "cate_language":"Langauge",
     "cate_office":"Office",
     "experience":"Experiences",
     "bio":"BIO",
