--- a/i18n/zh_CN.json
+++ b/i18n/zh_CN.json
@@ -18,7 +18,7 @@
     "major":"专业",
     "skill":"技能",
     "cate_professional":"专业类",
-    "cate_langauge":"语言类",
+    "cate_language":"语言类",
     "cate_office":"办公类",
     "experience":"项目经历",
     "bio":"自我描述",
